Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(07/09/2012) - Improvements and Maintenance - Version 1.7.0/1
[+] New Languages
    - Chinese
    - Dutch
    - Finish
    - Icelandic
[*] responsive.pot
[+] class for all post titles
[+] post navigation links
[*] global CSS improvements
[+] Theme Options support links

----

(07/02/2012) - Footer Bug Fix - Version 1.6.8/9
[!] footer items did not align properly
    while there was no menu or icons

(07/01/2012) - Improvements, Maintenance - Version 1.6.8
[+] New Languages
    - Russian
    - Lithuanian
    - Danish
    - Slovenian
[!] Yelp icon
[*] CSS page load improvements
[*] Icons optimizations
[+] FitVids support for HTTPS
[!] IE7 JS tinynav
[*] Dummy content revisions

----

(06/24/2012) - Bug fix - Version 1.6.7
[!] Unformatted form fields
[+] Polish Language

----

(06/24/2012) - Improvements - Version 1.6.6
[+] missing social icons added in previous version
[!] tinynav.js 

----

(06/23/2012) - Improvements - Version 1.6.3/4/5
[+] Theme Options
[+] Serbian and Persian languages
[+] New media queries 240 and 320
[x] JS Dev removal of duplicates
[+] Tinynav CSS
[+] Icons Yelp, Vimeo and foursquare
[*] FitVids support for Wistia
[!] Missing select image
[+] Placing back modernizer.js DEV

----

(06/11/2012)
[*] Improvement in Theme Options
[*] Tinynav to show Home instead of Navigation

----

(06/08/2012) - Maintenance - Version 1.6.0/1
[!] /includes/version.php
[!] fallback_cb for all but main menu
[!] admin-head-callback < 3.4
[*] code beautifying 

----

(06/07/2012) - Maintenance - Version 1.5.9
[x] Theme Option redirect upon activation
[*] /includes/version.php 3.4 compatibility
[*] Theme Option name < 3.4 compatibility
[+] menu hover color
[+] antialiased CSS
[x] body background image CSS
[+] minimized responsive menu

----

(06/03/2012) - Version 1.5.8
[!] missing search query from search.php

----

(06/02/2012) - Version 1.5.6/7