@@ -1,9 +1,9 @@
 /* 
 Theme Name: Responsive 
 Theme URI: http://themeid.com/responsive-theme/ 
-Description: Responsive WordPress Theme that features 9 page Templates such as Blog, Blog Summary and Template based layout designs: sidebar/content, sidebar/content half, content/sidebar and content/sidebar half. There is also full width page, sitemap Template as well as landing page for your PPC or any other purposes. Responsive also supports 9 widget areas and best of all this Theme is crafted with fluid proportion-based grid system of our own to adapt the design to the viewing environment. There are also Theme Options to control the content, webmaster tools, logo managament, social icons and 4 navigation menus. Currently translated in 22 languages: German, French, Portuguese, Italian, Swedish, Malay, Catalan, Spanish, Bulgarian, Norwegian, Croatian, Serbian, Persian, Polish, Slovenian, Russian, Danish, Lithuanian, Chinese, Dutch, Icelendic and Finish language. Everything is backed by our FREE dedicated support forums @ http://themeid.com/support
+Description: Responsive WordPress Theme that features 9 page Templates such as Blog, Blog Summary and Template based layout designs: sidebar/content, sidebar/content half, content/sidebar and content/sidebar half. There is also full width page, sitemap Template as well as landing page for your PPC or any other purposes. Responsive also supports 9 widget areas and best of all this Theme is crafted with fluid proportion-based grid system of our own to adapt the design to the viewing environment. There are also Theme Options to control the content, webmaster tools, logo managament, social icons and 4 navigation menus. Multilingual Ready (WPML) and also currently translated in 22 languages: German, French, Portuguese, Italian, Swedish, Malay, Catalan, Spanish, Bulgarian, Norwegian, Croatian, Serbian, Persian, Polish, Slovenian, Russian, Danish, Lithuanian, Chinese, Dutch, Icelendic and Finish language. Everything is backed by our FREE dedicated support forums @ http://themeid.com/support
 
-Version: 1.7.1
+Version: 1.7.2
 Author: ThemeID 
 Author URI: http://themeid.com
 Tags: white, black, gray, light, custom-menu, custom-header, custom-background, one-column, two-columns, left-sidebar, right-sidebar, flexible-width, theme-options, threaded-comments, full-width-template, sticky-post, translation-ready
@@ -110,6 +110,7 @@ p {
     word-wrap:break-word;
 }
 
+i,
 em,
 dfn,
 cite {
@@ -126,6 +127,7 @@ code {
 	font-style:normal;
 }
 
+b,
 strong {
 	font-weight:700;
 }
@@ -269,6 +271,12 @@ sub {
 
 img {
 	height:auto;
+	max-width:100%;
+}
+
+embed,
+iframe,
+object {
 	max-width:100%;
 }
 
@@ -1857,7 +1865,6 @@ form div {
 /* =Navigation
 -------------------------------------------------------------- */
 .navigation {
-	border-bottom:1px solid #ddd;
 	color:#111;
 	display:block;
 	font-size:13px;
