@@ -1,0 +1,15 @@
+<wpml-config>
+    <admin-texts>
+        <key name="responsive_theme_options">
+            <key name="home_headline" />
+            <key name="home_subheadline" />
+            <key name="home_content_area" />
+            <key name="cta_url" />
+            <key name="cta_text" />
+            <key name="featured_content" />
+        </key>
+    </admin-texts>    
+    <language-switcher-settings>
+        <key name="icl_additional_css">#widgets ul li a { display:block; }</key>
+    </language-switcher-settings>
+</wpml-config>
